fixes use of mvn wrapper

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
   email:
     - ro.franchini@gmail.com
 
-script: "mvn deploy --settings .travis/settings.xml"
+script: "./mvnw deploy --settings .travis/settings.xml"
 
 jdk:
   - openjdk8
