--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,15 @@
   limitations under the License.
   #L%
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.arcadeanalytics</groupId>
     <artifactId>arcade-data</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <description>Arcade Data: small library for fast data manipulation</description>
 
@@ -70,8 +72,7 @@
     <scm>
         <connection>scm:git:https://github.com/ArcadeAnalytics/arcade-data.git</connection>
         <url>https://github.com/ArcadeAnalytics/arcade-data</url>
-      <tag>HEAD</tag>
-  </scm>
+    </scm>
 
     <distributionManagement>
         <snapshotRepository>
@@ -236,7 +237,7 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <version>1.17</version>
                 <configuration>
-                    <verbose />
+                    <verbose></verbose>
                     <projectName>Arcade Data</projectName>
                     <inceptionYear>2018</inceptionYear>
                     <organizationName>ArcadeAnalytics</organizationName>
