--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <groupId>com.arcadeanalytics</groupId>
     <artifactId>arcade-data</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <name>Arcade Data</name>
     <url>https://arcadeanalytics.com/</url>
@@ -73,7 +73,7 @@
     <scm>
         <connection>scm:git:https://github.com/ArcadeAnalytics/arcade-data.git</connection>
         <url>https://github.com/ArcadeAnalytics/arcade-data</url>
-      <tag>arcade-data-1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
