--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
   limitations under the License.
   #L%
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.arcadeanalytics</groupId>
@@ -34,14 +35,17 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
+        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+        <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+        <dokka.version>0.10.0</dokka.version>
+
         <kotlin.version>1.3.61</kotlin.version>
         <junit.jupiter.version>5.5.2</junit.jupiter.version>
         <junit.platform.version>1.2.0</junit.platform.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
-        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
-        <dokka.version>0.10.0</dokka.version>
         <guava.version>28.1-jre</guava.version>
         <assertj-core.version>3.14.0</assertj-core.version>
         <assertj-guava.version>3.3.0</assertj-guava.version>
@@ -73,8 +77,8 @@
     <scm>
         <connection>scm:git:https://github.com/ArcadeAnalytics/arcade-data.git</connection>
         <url>https://github.com/ArcadeAnalytics/arcade-data</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <distributionManagement>
         <snapshotRepository>
@@ -126,8 +130,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -154,7 +158,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>${maven-source-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -182,7 +186,7 @@
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
+                <version>${nexus-staging-maven-plugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <serverId>ossrh</serverId>
@@ -274,24 +278,14 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <version>2.0.0</version>
                 <configuration>
-                    <verbose />
+                    <verbose/>
                     <projectName>Arcade Data</projectName>
                     <inceptionYear>2018</inceptionYear>
                     <organizationName>ArcadeAnalytics</organizationName>
                     <licenseName>apache_v2</licenseName>
                     <roots>${project.basedir}</roots>
                 </configuration>
-                <!--<executions>-->
-                <!--<execution>-->
-                <!--<id>first</id>-->
-                <!--<goals>-->
-                <!--<goal>update-file-header</goal>-->
-                <!--</goals>-->
-                <!--<phase>process-sources</phase>-->
-                <!--</execution>-->
-                <!--</executions>-->
             </plugin>
-
         </plugins>
     </build>
     <profiles>
@@ -343,12 +337,6 @@
             <version>${guava.version}</version>
         </dependency>
 
-
-        <!--// To use Log4J"s LogManager-->
-        <!--testRuntime("org.apache.logging.log4j:log4j-core:$log4jVersion")-->
-        <!--testRuntime("org.apache.logging.log4j:log4j-jul:$log4jVersion")-->
-
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -374,8 +362,6 @@
             <version>${assertj-guava.version}</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
 </project>
