--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,8 @@
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
         <dokka.version>0.10.1</dokka.version>
 
-        <kotlin.version>1.3.61</kotlin.version>
+        <kotlin.version>1.3.70</kotlin.version>
         <junit.jupiter.version>5.6.0</junit.jupiter.version>
-        <junit.platform.version>1.2.0</junit.platform.version>
         <guava.version>28.2-jre</guava.version>
         <assertj-core.version>3.15.0</assertj-core.version>
         <assertj-guava.version>3.3.0</assertj-guava.version>
@@ -344,7 +343,7 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test-junit</artifactId>
+            <artifactId>kotlin-test-junit5</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
